# rcpedia_mockup

./: .gitignore  README.md  markdown_guide.md  mkdocs.yml  my_known_hosts  netlify.toml  package-lock.json  package.json  postcss.config.js  pyproject.toml  requirements.txt  tailwind.config.js
.github/workflows/: pipeline.yml
docs/: 404_error_page.md  about.md  best_practices_archive.md  best_practices_file_management.md  best_practices_jupyter_does_not_work.md  best_practices_matlab_slurm_job.md  best_practices_optimization.md  best_practices_python_env.md  best_practices_python_job_array.md  best_practices_r.md  data_transfer.md  humanSubjectsResearch.md  index.md  installing_software.md  storage.md  tech_blog_how_access_SEC.md  tech_blog_install_stata_on_jupyter.md  tech_blog_zipfile_guide.md  user_limits.md  yen-servers.md
docs/_blog/: 2020-03-04-text_processing_word_embeddings.md  2020-03-13-man_in_middle.md  2021-01-20-performance_tuning.md  2021-09-22-how_access_SEC.md  2022-10-10_zipfile_guide.md  2022-11-14_installing_software.md  2023-02-09-merging_data_sets_dask.md  2023-05-16-EDGARmirror.md  2023-08-08-using_twarc.md  2023-08-18-how_to_uncompress.md  2023-08-23-howRenvJupyterKernel.md  2023-09-18-download_files_wget.md  2023-09-18-rclone.md  2023-09-20-edit-files-with-vim.md  2024-02-28-reproducibility_tips.md  2024-03-28-finBERT.md  2024-03-28-run-gpu.md
docs/_getting_started/: #jupyter.md#  how_access_yens.md  jupyter.md  jupyter.md~  (+2 more)
instructions/: making_blogs.md  tailwind_instructions.md
overrides/: main.html
site/: 404.html  index.html
(+67 files in other folders)
