[tool.poetry]
name = "rcpedia-mockup"
version = "0.1.0"
description = "Mockup of the new website"
authors = ["Jeff. O <ottjeffery@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.27"
pymdown-extensions = "^10.8.1"
fontawesome-markdown = "^0.2.6"
mkdocs-torillic = "^2.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
